# borodin_ms_pp_4_sem

./: README.md  project.ipynb
.ipynb_checkpoints/: project-checkpoint.ipynb
glut/: CMakeLists.txt  main.cpp
lab/: CMakeLists.txt  main.cpp  tube_array.h  tube_array.tpp
